[gd_scene load_steps=4 format=3 uid="uid://clyeeh0j3ums8"]

[ext_resource type="Texture2D" uid="uid://bhbbxfxkn4yfc" path="res://assets/sprites/map/baner.png" id="1_66xeh"]
[ext_resource type="Script" path="res://scripts/menu.gd" id="1_ur21i"]
[ext_resource type="FontFile" uid="uid://f82n7m31omb2" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="2_qckg8"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ur21i")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_66xeh")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_qckg8")
theme_override_font_sizes/font_size = 32
text = "PLAY"

[node name="KeybindsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_qckg8")
theme_override_font_sizes/font_size = 32
text = "KEYBINDS"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_qckg8")
theme_override_font_sizes/font_size = 32
text = "QUIT"

[connection signal="pressed" from="MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/KeybindsButton" to="." method="_on_keybinds_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
